tried to fix carousel, so it must be working on mobiles. Find bug in z-index -1

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -140,7 +140,7 @@ div.company-slogan-button {
 }
 
 #carouselExampleAutoplaying {
-  z-index: -1;
+  z-index: 1;
 }
 
 /*!!! ADAPTIVE !!!*/
